Rushikesh | Complete all TODO items